2008-12-20 fix the hatch bug in the pdf backend. minor update
           in docs and  example - JJL

2008-12-19 Update Axes.legend documnetation. /api/api_changes.rst is also
           updated to describe chages in keyword parameters.
           Issue a warning if old keyword parameters are used. - JJL

=======================================================================
Re-Released 0.98.5.2 at r6679

Release 0.98.5.2 at r6667

2008-12-18 Removed configobj, experimental traits and doc/mpl_data link - JDH

2008-12-18 Fix bug where a line with NULL data limits prevents
           subsequent data limits from calculating correctly - MGD

2008-12-17 Major documentation generator changes - MGD

2008-12-17 Applied macosx backend patch with support for path
           collections, quadmesh, etc... - JDH

2008-12-17 fix dpi-dependent behavior of text bbox and arrow in annotate
            -JJL

2008-12-16 Another attempt to fix dpi-dependent behavior of Legend. -JJL

======================================================================
2008-12-16 Release 0.98.5.1 at r6636

2008-12-16 Fixed dpi-dependent behavior of Legend and fancybox in Text.
           -JJL

2008-12-15 Removed mpl_data symlink in docs.  On platforms that do not
           support symlinks, these become copies, and the font files
           are large, so the distro becomes unneccessarily bloaded.
           Keeping the mpl_examples dir because relative links are
           harder for the plot directive and the *.py files are not so
           large. - JDH

2008-12-15 Fix \$ in non-math text with usetex off.  Document
differences between usetex on/off - MGD

2008-12-15 Fix anti-aliasing when auto-snapping - MGD

2008-12-15 Fix grid lines not moving correctly during pan and zoom - MGD

2008-12-12 Fixed warning in hist() with numpy 1.2 - MM

=================================================================
2008-12-09 Released 0.98.5 at svn r6573
